--- a/fe/src/html/index.html
+++ b/fe/src/html/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no">
-    <link rel="icon" type="image/png" href="/favicon.png">
-    <title> Veritext Replacement Template </title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+      user-scalable="no"
+    />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <title>Veritext Replacement Template</title>
   </head>
   <body>
     <div id="root"></div>
